--- a/src/main/webapp/anasayfa.xhtml
+++ b/src/main/webapp/anasayfa.xhtml
@@ -9,10 +9,10 @@
             <h:panelGrid>
                 <p:panelGrid columns="4" styleClass="combo">
                     <p:selectOneMenu value="#{anasayfaBean.selectMenu1}">
-                        <f:selectItem itemValue="Günlük" itemLabel="Günlük"/>
-                        <f:selectItem itemValue="Haftalık" itemLabel="Haftalık"/>
-                        <f:selectItem itemValue="Aylık" itemLabel="Aylık"/>
-                        <f:selectItem itemValue="Yıllık" itemLabel="Yıllık"/>
+                        <f:selectItem itemValue="Gunluk" itemLabel="Günlük"/>
+                        <f:selectItem itemValue="Haftalik" itemLabel="Haftalık"/>
+                        <f:selectItem itemValue="Aylik" itemLabel="Aylık"/>
+                        <f:selectItem itemValue="Yillik" itemLabel="Yıllık"/>
                     </p:selectOneMenu>
 
                     <p:selectOneMenu value="#{anasayfaBean.selectMenu2}">
@@ -28,29 +28,29 @@
                     <p:commandButton value="Uygula" update="anatablo" icon="ui-icon-check" action="#{anasayfaBean.uygulaButonu}" />
                 </p:panelGrid>
 
-                <p:dataTable id="anatablo" value="#{anasayfaBean.tablo}" reflow="true" rows="5" styleClass="tablo" paginator="true">
+                <p:dataTable var="anatablovar" id="anatablo" value="#{anasayfaBean.tablo}" reflow="true" rows="5" styleClass="tablo" paginator="true">
                         <p:column headerText="Sunucular ">
-                            <h:outputText value="#{anaData.sunucuAdi}" style="float: left"/>
+                            <h:outputText value="#{anatablovar.sunucuSanalAdi}" style="float: left"/>
                         </p:column>
 
                         <p:column headerText="IP Adresi" style="width: 150px">
-                           <h:outputText value="#{anaData.sunucuIp}" style="float: left"/>
+                           <h:outputText value="#{anatablovar.sunucuIp}" style="float: left"/>
                         </p:column>
                         <p:column headerText="Sunucu Uygulama Tipi">
-                          <h:outputText value="#{anaData.sunucuUygulamaTipi}" style="float: left"/>
+                          <h:outputText value="#{anatablovar.sunucuUygulamaTipi}" style="float: left"/>
                         </p:column>
                      
                         <p:column headerText="Sunucu Tipi">
-                            <h:outputText value="#{anaData.sunucuTipi}" style="float: left"/>
+                            <h:outputText value="#{anatablovar.sunucuTipi}" style="float: left"/>
                         </p:column>
                     <p:column headerText="Sunucu Port Bilgisi">
-                                <h:outputText value="#{anaData.sunucuPort}" style="float: left"/>
+                                <h:outputText value="#{anatablovar.sunucuPortBilgisi}" style="float: left"/>
                             </p:column>
                     <p:column headerText="Sunucu Türü">
-                                <h:outputText value="#{anaData.sunucuTuru}" style="float: left"/>
+                                <h:outputText value="#{anatablovar.sunucuTuru}" style="float: left"/>
                             </p:column>
                     <p:column headerText="Ulaşılabilirlik" style="width: 120px">
-                                <h:outputText value="#{anaData.ulasim}" style="float: left"/>
+                                <h:outputText value="#{anatablovar.ulasim}" style="float: left"/>
                             </p:column>
                     <p:column headerText="Loglar" style="width: 50px;text-align: center">
                               <p:commandButton title="Detay" icon="ui-icon-search" type="button" action="#{anasayfaBean.logButonu}"
@@ -58,13 +58,13 @@
 
                             </p:column>
                     <p:column headerText="Son Ulaşma Zamanı">
-                                 <h:outputText value="#{anaData.sonUlasim}" style="float: left"/>
+                                 <h:outputText value="#{anatablovar.sonUlasim}" style="float: left"/>
                             </p:column>
                     <p:column headerText="Son Durum">
-                                 <h:outputText value="#{anaData.sonDurum}" style="float: left"/>
+                                 <h:outputText value="#{anatablovar.sonDurum}" style="float: left"/>
                             </p:column>
                     <p:column headerText="Son Durum Zamanı">
-                                 <h:outputText value="#{anaData.sonDurumZamani}" style="float: left"/>
+                                 <h:outputText value="#{anatablovar.sonDurumZamani}" style="float: left"/>
                             </p:column>
                     <p:column headerText="" style="text-align: center;width: 77px">
                                  <p:commandButton value="Anlık İzle" action="#{anasayfaBean.anlikButonu}"/>
